--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "concurrently": "^8.2.2",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "rimraf": "^5.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
