--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "geography-benchmark",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "node dist/index.js",
+    "start": "node dist/app.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\" \"nodemon dist/index.js\""
+    "serve": "concurrently \"npx tsc -w\" \"nodemon dist/app.js\""
   },
   "keywords": [],
   "author": "",
@@ -17,11 +17,14 @@
     "concurrently": "^8.2.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "rimraf": "^5.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.16",
+    "@types/pg": "^8.11.0",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
   }
