--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "node dist/app.js",
+    "start": "node dist/backend/app.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\" \"nodemon dist/app.js\""
+    "serve": "concurrently \"npx tsc -w\" \"nodemon dist/backend/app.js\""
   },
   "keywords": [],
   "author": "",
@@ -17,12 +17,14 @@
     "concurrently": "^8.2.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "rimraf": "^5.0.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.17.10",
     "@types/node": "^20.11.16",
     "@types/pg": "^8.11.0",
     "nodemon": "^3.0.3",
