--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/postcss-js": "^4.0.4",
+    "autoprefixer": "^10.4.17",
     "concurrently": "^8.2.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -21,7 +23,10 @@
     "express-session": "^1.18.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "rimraf": "^5.0.5"
+    "postcss": "^8.4.35",
+    "postcss-cli": "^11.0.0",
+    "rimraf": "^5.0.5",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
