--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "autoprefixer": "^10.4.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
