change app.js filepath in backend/package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "rimraf dist && npx tsc",
     "prestart": "npm run build",
-    "start": "node dist/backend/app.js",
+    "start": "node dist/app.js",
     "preserve": "npm run build",
-    "serve": "concurrently \"npx tsc -w\" \"nodemon dist/backend/app.js\""
+    "serve": "concurrently \"npx tsc -w\" \"nodemon dist/app.js\""
   },
   "keywords": [],
   "author": "",
