--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,20 +1,1 @@
-{
-    "version": 2,
-    "builds": [
-      {
-        "src": "backend/dist/app.js",
-        "use": "@vercel/node",
-        "config": {
-          "includeFiles": [
-            "backend/dist/**/*"
-          ]
-        }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "backend/dist/app.js"
-      }
-    ]
-  }
+{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/api" }] }
