--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.0",
+    "@chakra-ui/react": "^2.10.4",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.13.0",
     "@react-spring/web": "^9.7.4",
     "autoprefixer": "^10.4.20",
     "d3": "^7.9.0",
     "framer-motion": "^11.3.24",
+    "openai": "^4.77.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.0",
     "tailwindcss": "^3.4.7"
   },
@@ -27,7 +28,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2",
     "vite": "^4.1.0"
   }
 }
