--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.10.4",
-    "@emotion/react": "^11.14.0",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@react-spring/web": "^9.7.4",
     "autoprefixer": "^10.4.20",
     "d3": "^7.9.0",
     "framer-motion": "^11.3.24",
     "openai": "^4.77.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^3.1.0",
