--- a/backend/package.json
+++ b/backend/package.json
@@ -21,17 +21,20 @@
     "axios": "^1.6.7",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-session": "^1.18.0",
+    "openai": "^4.77.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "postcss": "^8.4.35",
     "postcss-cli": "^11.0.0",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
-    "vercel": "^35.2.4"
+    "uuid": "^11.0.3",
+    "vercel": "^39.2.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
