--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@react-spring/web": "^9.7.4",
     "autoprefixer": "^10.4.20",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.3.24",
     "openai": "^4.77.0",
     "papaparse": "^5.4.1",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.0",
+    "react-select": "^5.9.0",
     "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
