--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.0",
     "react-select": "^5.9.0",
-    "tailwindcss": "^3.4.7"
+    "tailwindcss": "^3.4.7",
+    "typeit-react": "^2.7.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
